lyacompiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    PRINT
    DBLQUO
    UPPER
    RETURN
    NUM
    CONCATASSIGN
    PERCASSIGN
    RESULT
    SCONST
    LCURL
    PLUSASSIGN
    NULL
    BY
    DO
    TRUE
    RCURL
    FOR
    CCONST
    SINGQUO
    PRED
    READ
    ARROW
    OD
    CIRCUMF
    MINUSASSIGN
    WHILE
    DOWN
    DBLSLASH
    LOWER
    FALSE
    TIMESASSIGN
    TO
    SUCC
    DIVIDEASSIGN
    LENGTH

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> declaration_statement
Rule 5     statement -> synonym_statement
Rule 6     statement -> newmode_statement
Rule 7     statement -> procedure_statement
Rule 8     statement -> action_statement
Rule 9     declaration_statement -> DCL declaration_list SEMICOL
Rule 10    synonym_statement -> SYN synonym_list SEMICOL
Rule 11    newmode_statement -> TYPE newmode_list SEMICOL
Rule 12    procedure_statement -> label_id COLON procedure_definition SEMICOL
Rule 13    action_statement -> label_id COLON action SEMICOL
Rule 14    action_statement -> action SEMICOL
Rule 15    declaration_list -> declaration_list COMMA declaration
Rule 16    declaration_list -> declaration
Rule 17    declaration -> identifier_list mode initialization
Rule 18    declaration -> identifier_list mode
Rule 19    initialization -> ASSIGN expression
Rule 20    synonym_list -> synonym_list COMMA synonym_definition
Rule 21    synonym_list -> synonym_definition
Rule 22    synonym_definition -> identifier_list mode ASSIGN constant_expression
Rule 23    synonym_definition -> identifier_list ASSIGN constant_expression
Rule 24    constant_expression -> expression
Rule 25    newmode_list -> newmode_list COMMA mode_definition
Rule 26    newmode_list -> mode_definition
Rule 27    mode_definition -> identifier_list ASSIGN mode
Rule 28    mode -> mode_name
Rule 29    mode -> discrete_mode
Rule 30    mode -> reference_mode
Rule 31    mode -> composite_mode
Rule 32    discrete_mode -> integer_mode
Rule 33    discrete_mode -> boolean_mode
Rule 34    discrete_mode -> character_mode
Rule 35    discrete_mode -> discrete_range_mode
Rule 36    integer_mode -> INT
Rule 37    boolean_mode -> BOOL
Rule 38    character_mode -> CHAR
Rule 39    discrete_range_mode -> discrete_mode_name LPAREN literal_range RPAREN
Rule 40    discrete_range_mode -> discrete_mode LPAREN literal_range RPAREN
Rule 41    mode_name -> identifier
Rule 42    discrete_mode_name -> identifier
Rule 43    literal_range -> lower_bound COLON upper_bound
Rule 44    lower_bound -> expression
Rule 45    upper_bound -> expression
Rule 46    reference_mode -> REF mode
Rule 47    composite_mode -> string_mode
Rule 48    composite_mode -> array_mode
Rule 49    string_mode -> CHARS LBRACK string_length RBRACK
Rule 50    string_length -> integer_literal
Rule 51    array_mode -> ARRAY LBRACK index_mode_list RBRACK element_mode
Rule 52    index_mode_list -> index_mode_list COMMA index_mode
Rule 53    index_mode_list -> index_mode
Rule 54    index_mode -> discrete_mode
Rule 55    index_mode -> literal_range
Rule 56    element_mode -> mode
Rule 57    identifier_list -> identifier
Rule 58    identifier_list -> identifier_list COMMA identifier
Rule 59    identifier -> ID
Rule 60    integer_literal -> ICONST
Rule 61    expression -> operand0
Rule 62    expression -> conditional_expression
Rule 63    conditional_expression -> IF boolean_expression then_expression else_expression FI
Rule 64    conditional_expression -> IF boolean_expression then_expression elsif_expression else_expression FI
Rule 65    boolean_expression -> expression
Rule 66    then_expression -> THEN expression
Rule 67    else_expression -> ELSE expression
Rule 68    elsif_expression -> elsif_expression ELSIF boolean_expression then_expression
Rule 69    elsif_expression -> ELSIF boolean_expression then_expression
Rule 70    operand0 -> operand1
Rule 71    operand0 -> operand0 operator1 operand1
Rule 72    operator1 -> relational_operator
Rule 73    operator1 -> membership_operator
Rule 74    relational_operator -> AND
Rule 75    relational_operator -> OR
Rule 76    relational_operator -> EQUALS
Rule 77    relational_operator -> DIF
Rule 78    relational_operator -> GTR
Rule 79    relational_operator -> GEQ
Rule 80    relational_operator -> LSS
Rule 81    relational_operator -> LEQ
Rule 82    membership_operator -> IN
Rule 83    operand1 -> operand2
Rule 84    operand1 -> operand1 operator2 operand2
Rule 85    operator2 -> arithmetic_additive_operator
Rule 86    operator2 -> string_concatenation_operator
Rule 87    arithmetic_additive_operator -> PLUS
Rule 88    arithmetic_additive_operator -> MINUS
Rule 89    string_concatenation_operator -> CONCAT
Rule 90    operand2 -> operand3
Rule 91    operand2 -> operand2 arithmetic_multiplicative_operator operand3
Rule 92    arithmetic_multiplicative_operator -> TIMES
Rule 93    arithmetic_multiplicative_operator -> DIVIDE
Rule 94    arithmetic_multiplicative_operator -> PERC
Rule 95    operand3 -> monadic_operator operand4
Rule 96    operand3 -> operand4
Rule 97    monadic_operator -> MINUS
Rule 98    monadic_operator -> NOT
Rule 99    operand4 -> ICONST
Rule 100   action_statement_list -> action_statement_list action_statement
Rule 101   action_statement_list -> action_statement
Rule 102   label_id -> identifier
Rule 103   action -> bracketed_action
Rule 104   action -> exit_action
Rule 105   bracketed_action -> if_action
Rule 106   if_action -> IF boolean_expression then_clause else_clause FI
Rule 107   if_action -> IF boolean_expression then_clause FI
Rule 108   then_clause -> THEN action_statement_list
Rule 109   then_clause -> THEN empty
Rule 110   else_clause -> ELSE action_statement_list
Rule 111   else_clause -> ELSE empty
Rule 112   else_clause -> ELSIF boolean_expression then_clause else_clause
Rule 113   else_clause -> ELSIF boolean_expression then_clause
Rule 114   exit_action -> EXIT label_id
Rule 115   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMICOL statement_list END
Rule 116   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMICOL END
Rule 117   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN SEMICOL statement_list END
Rule 118   procedure_definition -> PROC LPAREN RPAREN result_spec SEMICOL statement_list END
Rule 119   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN SEMICOL END
Rule 120   procedure_definition -> PROC LPAREN RPAREN result_spec SEMICOL END
Rule 121   procedure_definition -> PROC LPAREN RPAREN SEMICOL statement_list END
Rule 122   procedure_definition -> PROC LPAREN RPAREN SEMICOL END
Rule 123   formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 124   formal_parameter_list -> formal_parameter
Rule 125   formal_parameter -> identifier_list parameter_spec
Rule 126   parameter_spec -> mode parameter_attribute
Rule 127   parameter_spec -> mode
Rule 128   parameter_attribute -> LOC
Rule 129   result_spec -> RETURNS LPAREN mode result_attribute RPAREN
Rule 130   result_spec -> RETURNS LPAREN mode RPAREN
Rule 131   result_attribute -> LOC
Rule 132   empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
ARRAY                : 51
ARROW                : 
ASSIGN               : 19 22 23 27
BOOL                 : 37
BY                   : 
CCONST               : 
CHAR                 : 38
CHARS                : 49
CIRCUMF              : 
COLON                : 12 13 43
COMMA                : 15 20 25 52 58 123
CONCAT               : 89
CONCATASSIGN         : 
DBLQUO               : 
DBLSLASH             : 
DCL                  : 9
DIF                  : 77
DIVIDE               : 93
DIVIDEASSIGN         : 
DO                   : 
DOWN                 : 
ELSE                 : 67 110 111
ELSIF                : 68 69 112 113
END                  : 115 116 117 118 119 120 121 122
EQUALS               : 76
EXIT                 : 114
FALSE                : 
FI                   : 63 64 106 107
FOR                  : 
GEQ                  : 79
GTR                  : 78
ICONST               : 60 99
ID                   : 59
IF                   : 63 64 106 107
IN                   : 82
INT                  : 36
LBRACK               : 49 51
LCURL                : 
LENGTH               : 
LEQ                  : 81
LOC                  : 128 131
LOWER                : 
LPAREN               : 39 40 115 116 117 118 119 120 121 122 129 130
LSS                  : 80
MINUS                : 88 97
MINUSASSIGN          : 
NOT                  : 98
NULL                 : 
NUM                  : 
OD                   : 
OR                   : 75
PERC                 : 94
PERCASSIGN           : 
PLUS                 : 87
PLUSASSIGN           : 
PRED                 : 
PRINT                : 
PROC                 : 115 116 117 118 119 120 121 122
RBRACK               : 49 51
RCURL                : 
READ                 : 
REF                  : 46
RESULT               : 
RETURN               : 
RETURNS              : 129 130
RPAREN               : 39 40 115 116 117 118 119 120 121 122 129 130
SCONST               : 
SEMICOL              : 9 10 11 12 13 14 115 116 117 118 119 120 121 122
SINGQUO              : 
SUCC                 : 
SYN                  : 10
THEN                 : 66 108 109
TIMES                : 92
TIMESASSIGN          : 
TO                   : 
TRUE                 : 
TYPE                 : 11
UPPER                : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

action               : 13 14
action_statement     : 8 100 101
action_statement_list : 100 108 110
arithmetic_additive_operator : 85
arithmetic_multiplicative_operator : 91
array_mode           : 48
boolean_expression   : 63 64 68 69 106 107 112 113
boolean_mode         : 33
bracketed_action     : 103
character_mode       : 34
composite_mode       : 31
conditional_expression : 62
constant_expression  : 22 23
declaration          : 15 16
declaration_list     : 9 15
declaration_statement : 4
discrete_mode        : 29 40 54
discrete_mode_name   : 39
discrete_range_mode  : 35
element_mode         : 51
else_clause          : 106 112
else_expression      : 63 64
elsif_expression     : 64 68
empty                : 109 111
exit_action          : 104
expression           : 19 24 44 45 65 66 67
formal_parameter     : 123 124
formal_parameter_list : 115 116 117 119 123
identifier           : 41 42 57 58 102
identifier_list      : 17 18 22 23 27 58 125
if_action            : 105
index_mode           : 52 53
index_mode_list      : 51 52
initialization       : 17
integer_literal      : 50
integer_mode         : 32
label_id             : 12 13 114
literal_range        : 39 40 55
lower_bound          : 43
membership_operator  : 73
mode                 : 17 18 22 27 46 56 126 127 129 130
mode_definition      : 25 26
mode_name            : 28
monadic_operator     : 95
newmode_list         : 11 25
newmode_statement    : 6
operand0             : 61 71
operand1             : 70 71 84
operand2             : 83 84 91
operand3             : 90 91
operand4             : 95 96
operator1            : 71
operator2            : 84
parameter_attribute  : 126
parameter_spec       : 125
procedure_definition : 12
procedure_statement  : 7
program              : 0
reference_mode       : 30
relational_operator  : 72
result_attribute     : 129
result_spec          : 115 116 118 120
statement            : 2 3
statement_list       : 1 2 115 117 118 121
string_concatenation_operator : 86
string_length        : 49
string_mode          : 47
synonym_definition   : 20 21
synonym_list         : 10 20
synonym_statement    : 5
then_clause          : 106 107 112 113
then_expression      : 63 64 68 69
upper_bound          : 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . declaration_statement
    (5) statement -> . synonym_statement
    (6) statement -> . newmode_statement
    (7) statement -> . procedure_statement
    (8) statement -> . action_statement
    (9) declaration_statement -> . DCL declaration_list SEMICOL
    (10) synonym_statement -> . SYN synonym_list SEMICOL
    (11) newmode_statement -> . TYPE newmode_list SEMICOL
    (12) procedure_statement -> . label_id COLON procedure_definition SEMICOL
    (13) action_statement -> . label_id COLON action SEMICOL
    (14) action_statement -> . action SEMICOL
    (102) label_id -> . identifier
    (103) action -> . bracketed_action
    (104) action -> . exit_action
    (59) identifier -> . ID
    (105) bracketed_action -> . if_action
    (114) exit_action -> . EXIT label_id
    (106) if_action -> . IF boolean_expression then_clause else_clause FI
    (107) if_action -> . IF boolean_expression then_clause FI

    DCL             shift and go to state 11
    SYN             shift and go to state 4
    TYPE            shift and go to state 18
    ID              shift and go to state 8
    EXIT            shift and go to state 7
    IF              shift and go to state 3

    declaration_statement          shift and go to state 12
    statement_list                 shift and go to state 2
    synonym_statement              shift and go to state 14
    if_action                      shift and go to state 19
    bracketed_action               shift and go to state 5
    program                        shift and go to state 6
    procedure_statement            shift and go to state 16
    action_statement               shift and go to state 17
    statement                      shift and go to state 9
    identifier                     shift and go to state 13
    exit_action                    shift and go to state 10
    newmode_statement              shift and go to state 1
    label_id                       shift and go to state 15
    action                         shift and go to state 20

state 1

    (6) statement -> newmode_statement .

    DCL             reduce using rule 6 (statement -> newmode_statement .)
    SYN             reduce using rule 6 (statement -> newmode_statement .)
    TYPE            reduce using rule 6 (statement -> newmode_statement .)
    ID              reduce using rule 6 (statement -> newmode_statement .)
    EXIT            reduce using rule 6 (statement -> newmode_statement .)
    IF              reduce using rule 6 (statement -> newmode_statement .)
    $end            reduce using rule 6 (statement -> newmode_statement .)
    END             reduce using rule 6 (statement -> newmode_statement .)


state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . declaration_statement
    (5) statement -> . synonym_statement
    (6) statement -> . newmode_statement
    (7) statement -> . procedure_statement
    (8) statement -> . action_statement
    (9) declaration_statement -> . DCL declaration_list SEMICOL
    (10) synonym_statement -> . SYN synonym_list SEMICOL
    (11) newmode_statement -> . TYPE newmode_list SEMICOL
    (12) procedure_statement -> . label_id COLON procedure_definition SEMICOL
    (13) action_statement -> . label_id COLON action SEMICOL
    (14) action_statement -> . action SEMICOL
    (102) label_id -> . identifier
    (103) action -> . bracketed_action
    (104) action -> . exit_action
    (59) identifier -> . ID
    (105) bracketed_action -> . if_action
    (114) exit_action -> . EXIT label_id
    (106) if_action -> . IF boolean_expression then_clause else_clause FI
    (107) if_action -> . IF boolean_expression then_clause FI

    $end            reduce using rule 1 (program -> statement_list .)
    DCL             shift and go to state 11
    SYN             shift and go to state 4
    TYPE            shift and go to state 18
    ID              shift and go to state 8
    EXIT            shift and go to state 7
    IF              shift and go to state 3

    declaration_statement          shift and go to state 12
    synonym_statement              shift and go to state 14
    if_action                      shift and go to state 19
    bracketed_action               shift and go to state 5
    label_id                       shift and go to state 15
    statement                      shift and go to state 21
    procedure_statement            shift and go to state 16
    action_statement               shift and go to state 17
    identifier                     shift and go to state 13
    exit_action                    shift and go to state 10
    newmode_statement              shift and go to state 1
    action                         shift and go to state 20

state 3

    (106) if_action -> IF . boolean_expression then_clause else_clause FI
    (107) if_action -> IF . boolean_expression then_clause FI
    (65) boolean_expression -> . expression
    (61) expression -> . operand0
    (62) expression -> . conditional_expression
    (70) operand0 -> . operand1
    (71) operand0 -> . operand0 operator1 operand1
    (63) conditional_expression -> . IF boolean_expression then_expression else_expression FI
    (64) conditional_expression -> . IF boolean_expression then_expression elsif_expression else_expression FI
    (83) operand1 -> . operand2
    (84) operand1 -> . operand1 operator2 operand2
    (90) operand2 -> . operand3
    (91) operand2 -> . operand2 arithmetic_multiplicative_operator operand3
    (95) operand3 -> . monadic_operator operand4
    (96) operand3 -> . operand4
    (97) monadic_operator -> . MINUS
    (98) monadic_operator -> . NOT
    (99) operand4 -> . ICONST

    IF              shift and go to state 24
    MINUS           shift and go to state 25
    NOT             shift and go to state 26
    ICONST          shift and go to state 22

    boolean_expression             shift and go to state 31
    operand1                       shift and go to state 23
    operand3                       shift and go to state 28
    monadic_operator               shift and go to state 33
    operand0                       shift and go to state 29
    operand4                       shift and go to state 27
    conditional_expression         shift and go to state 34
    expression                     shift and go to state 32
    operand2                       shift and go to state 30

state 4

    (10) synonym_statement -> SYN . synonym_list SEMICOL
    (20) synonym_list -> . synonym_list COMMA synonym_definition
    (21) synonym_list -> . synonym_definition
    (22) synonym_definition -> . identifier_list mode ASSIGN constant_expression
    (23) synonym_definition -> . identifier_list ASSIGN constant_expression
    (57) identifier_list -> . identifier
    (58) identifier_list -> . identifier_list COMMA identifier
    (59) identifier -> . ID

    ID              shift and go to state 8

    synonym_list                   shift and go to state 35
    synonym_definition             shift and go to state 36
    identifier                     shift and go to state 37
    identifier_list                shift and go to state 38

state 5

    (103) action -> bracketed_action .

    SEMICOL         reduce using rule 103 (action -> bracketed_action .)


state 6

    (0) S' -> program .



state 7

    (114) exit_action -> EXIT . label_id
    (102) label_id -> . identifier
    (59) identifier -> . ID

    ID              shift and go to state 8

    identifier                     shift and go to state 13
    label_id                       shift and go to state 39

state 8

    (59) identifier -> ID .

    ASSIGN          reduce using rule 59 (identifier -> ID .)
    SEMICOL         reduce using rule 59 (identifier -> ID .)
    COMMA           reduce using rule 59 (identifier -> ID .)
    LOC             reduce using rule 59 (identifier -> ID .)
    RPAREN          reduce using rule 59 (identifier -> ID .)
    LPAREN          reduce using rule 59 (identifier -> ID .)
    COLON           reduce using rule 59 (identifier -> ID .)
    REF             reduce using rule 59 (identifier -> ID .)
    ID              reduce using rule 59 (identifier -> ID .)
    INT             reduce using rule 59 (identifier -> ID .)
    BOOL            reduce using rule 59 (identifier -> ID .)
    CHAR            reduce using rule 59 (identifier -> ID .)
    CHARS           reduce using rule 59 (identifier -> ID .)
    ARRAY           reduce using rule 59 (identifier -> ID .)


state 9

    (3) statement_list -> statement .

    END             reduce using rule 3 (statement_list -> statement .)
    DCL             reduce using rule 3 (statement_list -> statement .)
    SYN             reduce using rule 3 (statement_list -> statement .)
    TYPE            reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    EXIT            reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)


state 10

    (104) action -> exit_action .

    SEMICOL         reduce using rule 104 (action -> exit_action .)


state 11

    (9) declaration_statement -> DCL . declaration_list SEMICOL
    (15) declaration_list -> . declaration_list COMMA declaration
    (16) declaration_list -> . declaration
    (17) declaration -> . identifier_list mode initialization
    (18) declaration -> . identifier_list mode
    (57) identifier_list -> . identifier
    (58) identifier_list -> . identifier_list COMMA identifier
    (59) identifier -> . ID

    ID              shift and go to state 8

    identifier                     shift and go to state 37
    declaration                    shift and go to state 40
    declaration_list               shift and go to state 41
    identifier_list                shift and go to state 42

state 12

    (4) statement -> declaration_statement .

    DCL             reduce using rule 4 (statement -> declaration_statement .)
    SYN             reduce using rule 4 (statement -> declaration_statement .)
    TYPE            reduce using rule 4 (statement -> declaration_statement .)
    ID              reduce using rule 4 (statement -> declaration_statement .)
    EXIT            reduce using rule 4 (statement -> declaration_statement .)
    IF              reduce using rule 4 (statement -> declaration_statement .)
    $end            reduce using rule 4 (statement -> declaration_statement .)
    END             reduce using rule 4 (statement -> declaration_statement .)


state 13

    (102) label_id -> identifier .

    COLON           reduce using rule 102 (label_id -> identifier .)
    SEMICOL         reduce using rule 102 (label_id -> identifier .)


state 14

    (5) statement -> synonym_statement .

    DCL             reduce using rule 5 (statement -> synonym_statement .)
    SYN             reduce using rule 5 (statement -> synonym_statement .)
    TYPE            reduce using rule 5 (statement -> synonym_statement .)
    ID              reduce using rule 5 (statement -> synonym_statement .)
    EXIT            reduce using rule 5 (statement -> synonym_statement .)
    IF              reduce using rule 5 (statement -> synonym_statement .)
    $end            reduce using rule 5 (statement -> synonym_statement .)
    END             reduce using rule 5 (statement -> synonym_statement .)


state 15

    (12) procedure_statement -> label_id . COLON procedure_definition SEMICOL
    (13) action_statement -> label_id . COLON action SEMICOL

    COLON           shift and go to state 43


state 16

    (7) statement -> procedure_statement .

    DCL             reduce using rule 7 (statement -> procedure_statement .)
    SYN             reduce using rule 7 (statement -> procedure_statement .)
    TYPE            reduce using rule 7 (statement -> procedure_statement .)
    ID              reduce using rule 7 (statement -> procedure_statement .)
    EXIT            reduce using rule 7 (statement -> procedure_statement .)
    IF              reduce using rule 7 (statement -> procedure_statement .)
    $end            reduce using rule 7 (statement -> procedure_statement .)
    END             reduce using rule 7 (statement -> procedure_statement .)


state 17

    (8) statement -> action_statement .

    DCL             reduce using rule 8 (statement -> action_statement .)
    SYN             reduce using rule 8 (statement -> action_statement .)
    TYPE            reduce using rule 8 (statement -> action_statement .)
    ID              reduce using rule 8 (statement -> action_statement .)
    EXIT            reduce using rule 8 (statement -> action_statement .)
    IF              reduce using rule 8 (statement -> action_statement .)
    $end            reduce using rule 8 (statement -> action_statement .)
    END             reduce using rule 8 (statement -> action_statement .)


state 18

    (11) newmode_statement -> TYPE . newmode_list SEMICOL
    (25) newmode_list -> . newmode_list COMMA mode_definition
    (26) newmode_list -> . mode_definition
    (27) mode_definition -> . identifier_list ASSIGN mode
    (57) identifier_list -> . identifier
    (58) identifier_list -> . identifier_list COMMA identifier
    (59) identifier -> . ID

    ID              shift and go to state 8

    identifier                     shift and go to state 37
    newmode_list                   shift and go to state 45
    identifier_list                shift and go to state 46
    mode_definition                shift and go to state 44

state 19

    (105) bracketed_action -> if_action .

    SEMICOL         reduce using rule 105 (bracketed_action -> if_action .)


state 20

    (14) action_statement -> action . SEMICOL

    SEMICOL         shift and go to state 47


state 21

    (2) statement_list -> statement_list statement .

    END             reduce using rule 2 (statement_list -> statement_list statement .)
    DCL             reduce using rule 2 (statement_list -> statement_list statement .)
    SYN             reduce using rule 2 (statement_list -> statement_list statement .)
    TYPE            reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    EXIT            reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 22

    (99) operand4 -> ICONST .

    TIMES           reduce using rule 99 (operand4 -> ICONST .)
    DIVIDE          reduce using rule 99 (operand4 -> ICONST .)
    PERC            reduce using rule 99 (operand4 -> ICONST .)
    PLUS            reduce using rule 99 (operand4 -> ICONST .)
    MINUS           reduce using rule 99 (operand4 -> ICONST .)
    CONCAT          reduce using rule 99 (operand4 -> ICONST .)
    AND             reduce using rule 99 (operand4 -> ICONST .)
    OR              reduce using rule 99 (operand4 -> ICONST .)
    EQUALS          reduce using rule 99 (operand4 -> ICONST .)
    DIF             reduce using rule 99 (operand4 -> ICONST .)
    GTR             reduce using rule 99 (operand4 -> ICONST .)
    GEQ             reduce using rule 99 (operand4 -> ICONST .)
    LSS             reduce using rule 99 (operand4 -> ICONST .)
    LEQ             reduce using rule 99 (operand4 -> ICONST .)
    IN              reduce using rule 99 (operand4 -> ICONST .)
    SEMICOL         reduce using rule 99 (operand4 -> ICONST .)
    COMMA           reduce using rule 99 (operand4 -> ICONST .)
    THEN            reduce using rule 99 (operand4 -> ICONST .)
    ELSE            reduce using rule 99 (operand4 -> ICONST .)
    ELSIF           reduce using rule 99 (operand4 -> ICONST .)
    COLON           reduce using rule 99 (operand4 -> ICONST .)
    FI              reduce using rule 99 (operand4 -> ICONST .)
    RPAREN          reduce using rule 99 (operand4 -> ICONST .)
    RBRACK          reduce using rule 99 (operand4 -> ICONST .)


state 23

    (70) operand0 -> operand1 .
    (84) operand1 -> operand1 . operator2 operand2
    (85) operator2 -> . arithmetic_additive_operator
    (86) operator2 -> . string_concatenation_operator
    (87) arithmetic_additive_operator -> . PLUS
    (88) arithmetic_additive_operator -> . MINUS
    (89) string_concatenation_operator -> . CONCAT

    AND             reduce using rule 70 (operand0 -> operand1 .)
    OR              reduce using rule 70 (operand0 -> operand1 .)
    EQUALS          reduce using rule 70 (operand0 -> operand1 .)
    DIF             reduce using rule 70 (operand0 -> operand1 .)
    GTR             reduce using rule 70 (operand0 -> operand1 .)
    GEQ             reduce using rule 70 (operand0 -> operand1 .)
    LSS             reduce using rule 70 (operand0 -> operand1 .)
    LEQ             reduce using rule 70 (operand0 -> operand1 .)
    IN              reduce using rule 70 (operand0 -> operand1 .)
    COLON           reduce using rule 70 (operand0 -> operand1 .)
    ELSE            reduce using rule 70 (operand0 -> operand1 .)
    ELSIF           reduce using rule 70 (operand0 -> operand1 .)
    THEN            reduce using rule 70 (operand0 -> operand1 .)
    SEMICOL         reduce using rule 70 (operand0 -> operand1 .)
    COMMA           reduce using rule 70 (operand0 -> operand1 .)
    FI              reduce using rule 70 (operand0 -> operand1 .)
    RPAREN          reduce using rule 70 (operand0 -> operand1 .)
    RBRACK          reduce using rule 70 (operand0 -> operand1 .)
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    CONCAT          shift and go to state 50

    arithmetic_additive_operator   shift and go to state 51
    operator2                      shift and go to state 52
    string_concatenation_operator  shift and go to state 53

state 24

    (63) conditional_expression -> IF . boolean_expression then_expression else_expression FI
    (64) conditional_expression -> IF . boolean_expression then_expression elsif_expression else_expression FI
    (65) boolean_expression -> . expression
    (61) expression -> . operand0
    (62) expression -> . conditional_expression
    (70) operand0 -> . operand1
    (71) operand0 -> . operand0 operator1 operand1
    (63) conditional_expression -> . IF boolean_expression then_expression else_expression FI
    (64) conditional_expression -> . IF boolean_expression then_expression elsif_expression else_expression FI
    (83) operand1 -> . operand2
    (84) operand1 -> . operand1 operator2 operand2
    (90) operand2 -> . operand3
    (91) operand2 -> . operand2 arithmetic_multiplicative_operator operand3
    (95) operand3 -> . monadic_operator operand4
    (96) operand3 -> . operand4
    (97) monadic_operator -> . MINUS
    (98) monadic_operator -> . NOT
    (99) operand4 -> . ICONST

    IF              shift and go to state 24
    MINUS           shift and go to state 25
    NOT             shift and go to state 26
    ICONST          shift and go to state 22

    boolean_expression             shift and go to state 54
    expression                     shift and go to state 32
    operand1                       shift and go to state 23
    operand3                       shift and go to state 28
    monadic_operator               shift and go to state 33
    operand4                       shift and go to state 27
    conditional_expression         shift and go to state 34
    operand0                       shift and go to state 29
    operand2                       shift and go to state 30

state 25

    (97) monadic_operator -> MINUS .

    ICONST          reduce using rule 97 (monadic_operator -> MINUS .)


state 26

    (98) monadic_operator -> NOT .

    ICONST          reduce using rule 98 (monadic_operator -> NOT .)


state 27

    (96) operand3 -> operand4 .

    TIMES           reduce using rule 96 (operand3 -> operand4 .)
    DIVIDE          reduce using rule 96 (operand3 -> operand4 .)
    PERC            reduce using rule 96 (operand3 -> operand4 .)
    PLUS            reduce using rule 96 (operand3 -> operand4 .)
    MINUS           reduce using rule 96 (operand3 -> operand4 .)
    CONCAT          reduce using rule 96 (operand3 -> operand4 .)
    AND             reduce using rule 96 (operand3 -> operand4 .)
    OR              reduce using rule 96 (operand3 -> operand4 .)
    EQUALS          reduce using rule 96 (operand3 -> operand4 .)
    DIF             reduce using rule 96 (operand3 -> operand4 .)
    GTR             reduce using rule 96 (operand3 -> operand4 .)
    GEQ             reduce using rule 96 (operand3 -> operand4 .)
    LSS             reduce using rule 96 (operand3 -> operand4 .)
    LEQ             reduce using rule 96 (operand3 -> operand4 .)
    IN              reduce using rule 96 (operand3 -> operand4 .)
    COLON           reduce using rule 96 (operand3 -> operand4 .)
    THEN            reduce using rule 96 (operand3 -> operand4 .)
    SEMICOL         reduce using rule 96 (operand3 -> operand4 .)
    COMMA           reduce using rule 96 (operand3 -> operand4 .)
    ELSE            reduce using rule 96 (operand3 -> operand4 .)
    ELSIF           reduce using rule 96 (operand3 -> operand4 .)
    FI              reduce using rule 96 (operand3 -> operand4 .)
    RPAREN          reduce using rule 96 (operand3 -> operand4 .)
    RBRACK          reduce using rule 96 (operand3 -> operand4 .)


state 28

    (90) operand2 -> operand3 .

    TIMES           reduce using rule 90 (operand2 -> operand3 .)
    DIVIDE          reduce using rule 90 (operand2 -> operand3 .)
    PERC            reduce using rule 90 (operand2 -> operand3 .)
    PLUS            reduce using rule 90 (operand2 -> operand3 .)
    MINUS           reduce using rule 90 (operand2 -> operand3 .)
    CONCAT          reduce using rule 90 (operand2 -> operand3 .)
    AND             reduce using rule 90 (operand2 -> operand3 .)
    OR              reduce using rule 90 (operand2 -> operand3 .)
    EQUALS          reduce using rule 90 (operand2 -> operand3 .)
    DIF             reduce using rule 90 (operand2 -> operand3 .)
    GTR             reduce using rule 90 (operand2 -> operand3 .)
    GEQ             reduce using rule 90 (operand2 -> operand3 .)
    LSS             reduce using rule 90 (operand2 -> operand3 .)
    LEQ             reduce using rule 90 (operand2 -> operand3 .)
    IN              reduce using rule 90 (operand2 -> operand3 .)
    THEN            reduce using rule 90 (operand2 -> operand3 .)
    SEMICOL         reduce using rule 90 (operand2 -> operand3 .)
    COMMA           reduce using rule 90 (operand2 -> operand3 .)
    ELSE            reduce using rule 90 (operand2 -> operand3 .)
    ELSIF           reduce using rule 90 (operand2 -> operand3 .)
    COLON           reduce using rule 90 (operand2 -> operand3 .)
    FI              reduce using rule 90 (operand2 -> operand3 .)
    RPAREN          reduce using rule 90 (operand2 -> operand3 .)
    RBRACK          reduce using rule 90 (operand2 -> operand3 .)


state 29

    (61) expression -> operand0 .
    (71) operand0 -> operand0 . operator1 operand1
    (72) operator1 -> . relational_operator
    (73) operator1 -> . membership_operator
    (74) relational_operator -> . AND
    (75) relational_operator -> . OR
    (76) relational_operator -> . EQUALS
    (77) relational_operator -> . DIF
    (78) relational_operator -> . GTR
    (79) relational_operator -> . GEQ
    (80) relational_operator -> . LSS
    (81) relational_operator -> . LEQ
    (82) membership_operator -> . IN

    COLON           reduce using rule 61 (expression -> operand0 .)
    THEN            reduce using rule 61 (expression -> operand0 .)
    RPAREN          reduce using rule 61 (expression -> operand0 .)
    RBRACK          reduce using rule 61 (expression -> operand0 .)
    COMMA           reduce using rule 61 (expression -> operand0 .)
    SEMICOL         reduce using rule 61 (expression -> operand0 .)
    ELSE            reduce using rule 61 (expression -> operand0 .)
    ELSIF           reduce using rule 61 (expression -> operand0 .)
    FI              reduce using rule 61 (expression -> operand0 .)
    AND             shift and go to state 60
    OR              shift and go to state 56
    EQUALS          shift and go to state 65
    DIF             shift and go to state 64
    GTR             shift and go to state 66
    GEQ             shift and go to state 61
    LSS             shift and go to state 63
    LEQ             shift and go to state 57
    IN              shift and go to state 59

    membership_operator            shift and go to state 55
    operator1                      shift and go to state 58
    relational_operator            shift and go to state 62

state 30
